3896.	[bug]		Address performance issues with DSCP code on some
			platforms. [RT #36534]

3895.	[func]		Add the ability to set the DSCP code point to dig.
			[RT #36546]

3894.	[bug]		Buffers in isc_print_vsnprintf were not properly
			initialized leading to potential overflows when
			printing out quad values. [RT #36505]

3893.	[bug]		Peer DSCP values could be returned without being set.
			[RT #36538]

3892.	[bug]		Setting '-t aaaa' in .digrc had unintended side
			effects. [RT #36452]

3891.	[bug]		Use ${INSTALL_SCRIPT} rather than ${INSTALL_PROGRAM}
			to install python programs.

3890.	[bug]		RRSIG sets that were not loaded in a single transaction
			at start up where not being correctly added to
			re-signing heaps.  [RT #36302]

3889.	[port]		hurd: configure fixes as per:
			https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=746540

3888.	[func]		'rndc status' now reports the number of automatic
			zones. [RT #36015]

3887.	[cleanup]	Make all static symbols in rbtdb64 end in "64" so
			they are easier to use in a debugger. [RT #36373]

3886.	[bug]		rbtdb_write_header should use a once to initialize
			FILE_VERSION. [RT #36374]

3885.	[port]		Use 'open()' rather than 'file()' to open files in
			python.

3884.	[protocol]	Add CDS and CDNSKEY record types. [RT #36333]

3883.	[placeholder]

3882.	[func]		By default, negative trust anchors will be tested
			periodically to see whether data below them can be
			validated, and if so, they will be allowed to
			expire early. The "rndc nta -force" option
			overrides this behvaior.  The default NTA lifetime
			and the recheck frequency can be configured by the
			"nta-lifetime" and "nta-recheck" options. [RT #36146]

3881.	[bug]		Address memory leak with UPDATE error handling.
			[RT #36303]

3880.	[test]		Update ans.pl to work with new TSIG support in
			Net::DNS; add additional Net::DNS version prerequisite
			checks. [RT #36327]

3879.	[func]		Add version printing option to various BIND utilities.
			[RT #10686]
