@@ -83,3 +83,10 @@ zone "policy1" {
 	allow-update { any; };
 	allow-transfer { any; };
 };
+
+zone "policy2" {
+	type master;
+	file "policy2.db";
+	allow-update { any; };
+	allow-transfer { any; };
+};
