@@ -12,6 +12,8 @@
 ; OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 ; PERFORMANCE OF THIS SOFTWARE.
 
-$TTL	120
-@	SOA	.  hostmaster.ns.example.tld5. ( 1 3600 1200 604800 60 )
-	NS	.
+; $Id$
+
+
+.	120	NS	ns.
+ns.	120	A	10.53.0.1
